--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                             <div class="general content_texts main_text">
                                 <p>Project hosting hub for Jackson
                                     <br><br>
-                                    I can make websites, 2d or 3d assets, games, apps, and animations. (Some better than other)
+                                    A simple website for me to link my past and current projects 
                                     <br><br>
-                                    Find projects I have completed under <a onclick="changeText('project')">Projects</a> for more detail
+                                    Find projects under <a onclick="changeText('project')">Projects</a> 
                                     <br><br>
                                     Links to the assets that I have published are under <a onclick="changeText('asset')">Assets</a>
                                     <br><br>
-                                    Contact info and other miscellaneous are under <a onclick="changeText('other')">Others</a>
+                                    Find my contacts and other info under <a onclick="changeText('other')">Others</a>
                                 </p>
                             </div>
                             <div class="project content_texts">
@@ -74,24 +74,22 @@
                                             Deflect - Mobile game</a></li>
                                         <li><a target="_blank" href="https://residencerenovation.net/">
                                             Residence Renovation - Website</a></li>
+                                        <li><a target="_blank" href="https://github.com/Jaks01/json-customer-tracker">
+                                            JSON Customer Tracker - WPF App</a></li>
                                     </ul>
                                     <br><br>
                                     <ul>
                                         <li>Work In Progress:</li>
-                                        <li>My Spending List - Android App</li>
-                                        <li><a target="_blank" href="https://github.com/Jaks01/2d-game-prototype/blob/master/opentk_documentation.docx">
-                                            OpenTK Documentations</a></li>
-                                        <li>Portfolio - Website</li>
-                                        <li>Grade Tracker - Android App</li>
+                                        <li><a target="_blank" href="https://github.com/Jaks01/InvMgmt">InvMngt (Inventory Management Software) - WPF App</a></li>
+                                        <li><a target="_blank" href="https://github.com/Jaks01">
+                                            GitHub Page</a></li>
                                     </ul>
                                 </p>
                             </div>
                             <div class="asset content_texts">
-                                <p>I make assets here and there
-                                    <br>
-                                    If you like the stuff I make, you can contact me for more
+                                <p>I have made game assets
                                     <br><br>
-                                    Completed asset packs hosted on <a target="_blank" href="https://jaks.itch.io/">itch.io</a>:
+                                    Completed asset packs are hosted on <a target="_blank" href="https://jaks.itch.io/">itch.io</a>:
                                     <ul>
                                         <li><a target="_blank" href="https://jaks.itch.io/lowpolyforestpack">
                                             Low Poly Forest Pack</a></li>
@@ -103,18 +101,14 @@
                                 </p>
                             </div>
                             <div class="other content_texts">
-                                <p>Here are some of the side stuff.
+                                <p>Here are some other information about me
                                     <br><br>
-                                    There will be drawn 3D modeling references, painting, character art on here in the future.
+                                    I am a Grade 12 highschool student who likes computer stuff, art, and games. 
                                     <br><br>
-                                    Will also put other stuff (ex. school) on here too. Maybe.
+                                    I enjoy making variety of projects during my free time, and I wish to get into a computer science program at a university in the future
                                     <br><br>
-                                    If you would like to support me, you can do so
-                                    <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=GQ78DPFNZS6VG&currency_code=CAD&source=url">
-                                        here.</a> 
+                                    My knowledge in programming and software development are limited, but I am always willing to improve and learn something new. 
                                     <br>
-                                    All support are appreciated!
-                                    <br><br>
                                 </p>
                                 <h1>Socials</h1>
                                 <p>
@@ -123,8 +117,6 @@
                                     <br>
                                     <img class="social" src="imgs/gm.png" alt="gmail logo">
                                     &emsp;&emsp;jacksonus0204@gmail.com
-                                    <br>
-                                    DM for others.
                                 </p>
                             </div>
                         </div>
@@ -133,8 +125,8 @@
                             <div class="content_offset">
                                 <a class="slide" target="_blank" href="https://play.google.com/store/apps/details?id=com.jy.mywatchlist">
                                     <img src="imgs/mwl1.png"></a>
-                                <a class="slide" target="_blank" href="https://jaks.itch.io/lowpolyforestpack"><img src="imgs/asset1.png"></a>
-                                <a class="slide"><img src="imgs/holder2.jpg"></a>
+                                <a class="slide" target="_blank" href="https://github.com/Jaks01/InvMgmt"><img src="imgs/invmngt.PNG"></a>
+                                <a class="slide" target="_blank" href="https://residencerenovation.net/"><img src="imgs/residence_renovation.PNG"></a>
                             </div>
                         </div>
                     </div>
