updated background image

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="icon" href="imgs/main_bg2.png"/>
     <link rel="stylesheet" type="text/css" media="screen" href="cssreset.css" />
     <link rel="stylesheet" type="text/css" media="only screen and (min-width:1281px)" href="style.css" />
-    <link rel="stylesheet" type="text/css" media="only screen and (min-width:447px) and (max-width:1280px)" href="style_min.css" />
-    <link rel="stylesheet" type="text/css" media="only screen and (max-width:446px)" href="style_mobile.css" />
+    <link rel="stylesheet" type="text/css" media="only screen and (min-width:551px) and (max-width:1280px)" href="style_min.css" />
+    <link rel="stylesheet" type="text/css" media="only screen and (max-width:550px)" href="style_mobile.css" />
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
 </head>
 
 <body onload="$('.wrapper').delay(100).animate({'opacity': '1'}, 550); $('.panel').delay(450).animate({'opacity': '1'}, 950);">
     <div class="wrapper">
-        <article class="main_sector" style="background: url('imgs/main_bg2.png');">
+        <div class="background"></div>
+        <article class="main_sector" >
             <section class="info">
                 <div class="panel">
                     <div class="info_texts">
@@ -108,7 +109,7 @@
                                     I enjoy making variety of projects during my free time, and I wish to get into a computer science program at a university in the future
                                     <br><br>
                                     My knowledge in programming and software development are limited, but I am always willing to improve and learn something new. 
-                                    <br>
+                                    <br><br>
                                 </p>
                                 <h1>Socials</h1>
                                 <p>
