--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                 <a class="slide" target="_blank" href="https://play.google.com/store/apps/details?id=com.jy.mywatchlist">
                                     <img src="imgs/mwl1.png"></a>
                                 <a class="slide" target="_blank" href="https://github.com/Jaks01/InvMgmt"><img src="imgs/invmngt.PNG"></a>
-                                <a class="slide" target="_blank" href="https://homereno.netlify.com/"><img src="imgs/residence_renovation.PNG"></a>
+                                <a class="slide" target="_blank" href="https://homereno.netlify.com/"><img src="https://homereno.netlify.com/imgs/gallery/Kitchen/22.JPG"></a>
                             </div>
                         </div>
                     </div>
