--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
                                             Low Poly Rifle Pack</a></li> 
                                         <li><a target="_blank" href="https://jaks.itch.io/lowpolymeleeweapon">
                                             Low Poly Melee Weapon Pack</a></li>  
+                                        <li><a target="_blank" href="https://jaks.itch.io/pixelnature">
+                                            Pixel Art Nature Assets</a></li>
                                     </ul>
                                 </p>
                             </div>
