--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                             My Watch List - Android App</a></li>
                                         <li><a target="_blank" href="https://play.google.com/store/apps/details?id=com.jackson.deflect&hl=en">
                                             Deflect - Mobile game</a></li>
-                                        <li><a target="_blank" href="https://residencerenovation.net/">
+                                        <li><a target="_blank" href="https://homereno.netlify.com/">
                                             Residence Renovation - Website</a></li>
                                         <li><a target="_blank" href="https://github.com/Jaks01/json-customer-tracker">
                                             JSON Customer Tracker - WPF App</a></li>
