--- a/index.html
+++ b/index.html
@@ -72,16 +72,27 @@
                                         <li><a target="_blank" href="https://play.google.com/store/apps/details?id=com.jy.mywatchlist">
                                             My Watch List - Android App</a></li>
                                         <li><a target="_blank" href="https://play.google.com/store/apps/details?id=com.jackson.deflect&hl=en">
-                                            Deflect - Mobile game</a></li>
+                                            Deflect - Mobile Game</a></li>
+                                        <li><a target="_blank" href="https://jaks.itch.io/minesweeper-multiplayer">
+                                            Minesweeper Online - Desktop Game</a></li>
+                                        <li><a target="_blank" href="https://homerenov1.netlify.com/">
+                                            Residence Renovation V1 (First website) - Website</a></li>
                                         <li><a target="_blank" href="https://homereno.netlify.com/">
-                                            Residence Renovation - Website</a></li>
+                                            Residence Renovation V2 - Website</a></li>
+                                        <li><a target="_blank" href="https://msswebdev.netlify.com/">
+                                            WebDev Club - Website</a></li>
+                                        <li><a target="_blank" href="https://galvanizing.netlify.com/">
+                                            Galvanizing - Website</a></li>
                                         <li><a target="_blank" href="https://github.com/Jaks01/json-customer-tracker">
                                             JSON Customer Tracker - WPF App</a></li>
+                                        <li><a target="_blank" href="https://github.com/Jaks01/InvMgmt">
+                                            InvMngt (Inventory Management Software) - WPF App</a></li>
                                     </ul>
                                     <br><br>
                                     <ul>
                                         <li>Work In Progress:</li>
-                                        <li><a target="_blank" href="https://github.com/Jaks01/InvMgmt">InvMngt (Inventory Management Software) - WPF App</a></li>
+                                        <li><a target="_blank" href="https://github.com/Jaks01/osu-song-player">
+                                            osu! Song Player - WPF App</a></li>
                                         <li><a target="_blank" href="https://github.com/Jaks01">
                                             GitHub Page</a></li>
                                     </ul>
@@ -128,8 +139,8 @@
                             <div class="content_offset">
                                 <a class="slide" target="_blank" href="https://play.google.com/store/apps/details?id=com.jy.mywatchlist">
                                     <img src="imgs/mwl1.png"></a>
-                                <a class="slide" target="_blank" href="https://github.com/Jaks01/InvMgmt"><img src="imgs/invmngt.PNG"></a>
-                                <a class="slide" target="_blank" href="https://homereno.netlify.com/"><img src="https://homereno.netlify.com/imgs/gallery/Kitchen/22.JPG"></a>
+                                <a class="slide" target="_blank" href="https://github.com/Jaks01"><img src="imgs/github.jpg"></a>
+                                <a class="slide" target="_blank" href="https://jaks.itch.io/"><img src="imgs/itchio.png"></a>
                             </div>
                         </div>
                     </div>
